feat: update person n level

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -146,6 +146,16 @@
                         <div data-i18n="Master Course">Master Course</div>
                     </a>
                 </li>
+                <li class="menu-item">
+                    <a th:href="@{~/master/person}" class="menu-link">
+                        <div data-i18n="Master Person">Master Person</div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a th:href="@{~/master/lookup}" class="menu-link">
+                        <div data-i18n="Master Lookup">Master Lookup</div>
+                    </a>
+                </li>
             </ul>
         </li>
 
