--- a/src/main/resources/templates/pages/master/level/index.html
+++ b/src/main/resources/templates/pages/master/level/index.html
@@ -30,9 +30,10 @@
                     <thead class="table-light">
                         <tr>
                             <th>No</th>
-                            <th>Id Lembaga</th>
+                            <th>Lembaga</th>
                             <th>Kode Level</th>
                             <th>Nama Level</th>
+                            <th>No Urut</th>
                             <th>Status</th>
                             <th class="cell-fit">Actions</th>
                         </tr>
