--- a/src/main/resources/templates/pages/master/level/delete.html
+++ b/src/main/resources/templates/pages/master/level/delete.html
@@ -9,29 +9,35 @@
         <div class="modal-body">
             <div class="row">
                 <div class="col mb-3">
-                    <label for="nama" class="form-label">Id Lembaga</label>
-                    <input type="number" id="idLembaga" name="idLembaga" th:value="${level.idLembaga}" class="form-control" placeholder="Id Lembaga" readonly />
-
+                    <label for="namaLembaga" class="form-label">Lembaga</label>
+                    <input type="text" id="namaLembaga" name="namaLembaga" class="form-control" th:value="${level.namaLembaga}" readonly />
+                    <input type="hidden" name="idLembaga" th:value="${level.idLembaga}">
                 </div>
             </div>
             <div class="row">
                 <div class="col mb-3">
                     <label for="kode" class="form-label">Kode Level</label>
-                    <input type="text" id="kode" name="kode" th:value="${level.kode}" class="form-control" placeholder="Kode Level" readonly />
+                    <input type="text" id="kode" name="kode" th:value="${level.kode}" class="form-control" readonly />
                 </div>
             </div>
             <div class="row">
                 <div class="col mb-3">
                     <label for="nama" class="form-label">Nama Level</label>
-                    <input type="text" id="nama" name="nama" th:value="${level.nama}" class="form-control" placeholder="Nama Level" readonly />
+                    <input type="text" id="nama" name="nama" th:value="${level.nama}" class="form-control" readonly />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col mb-3">
+                    <label for="noUrut" class="form-label">No Urut</label>
+                    <input type="text" id="noUrut" name="nama" th:value="${level.noUrut}" class="form-control" readonly />
                 </div>
             </div>
         </div>
         <div class="modal-footer">
+            <button type="submit" class="btn btn-danger">Delete</button>
             <button type="button" class="btn btn-label-secondary" data-bs-dismiss="modal">
                 Close
             </button>
-            <button type="submit" class="btn btn-danger">Delete</button>
         </div>
     </div>
 </form>
