--- a/src/main/resources/templates/pages/master/person/add.html
+++ b/src/main/resources/templates/pages/master/person/add.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col mb-0">
                     <label for="tanggalLahir" class="form-label">Tanggal Lahir</label>
-                    <input type="text" id="tanggalLahir" name="tanggalLahir" th:value="${person.tanggalLahir}"
+                    <input type="date" id="tanggalLahir" name="tanggalLahir" th:value="${person.tanggalLahir}"
                            th:class="${#fields.hasErrors('alamatTinggal')}? 'form-control is-invalid': 'form-control'" placeholder="Alamat Tinggal" />
                     <div th:if="${#fields.hasErrors('tanggalLahir')}" class="invalid-feedback">
                         <span th:errors="*{alamatTinggal}"></span>
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col mb-3">
                     <label for="golDarah" class="form-label">Gol Darah</label>
-                    <select id="golDarah" name="gender" th:value="${person.golDarah}" data-allow-clear="true"
+                    <select id="golDarah" name="golDarah" th:value="${person.golDarah}" data-allow-clear="true"
                             th:class="${#fields.hasErrors('golDarah')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Gol Darah</option>
                         <option th:each="item : ${golDarah}" th:value="${item.kode}" th:text="${item.nama}"
