--- a/src/main/resources/templates/pages/master/person/edit.html
+++ b/src/main/resources/templates/pages/master/person/edit.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col mb-3">
                     <label for="tanggalLahir" class="form-label">Tanggal Lahir</label>
-                    <input type="text" id="tanggalLahir" name="tanggalLahir" th:value="${person.tanggalLahir}"
+                    <input type="date" id="tanggalLahir" name="tanggalLahir" th:value="${person.tanggalLahir}"
                            th:class="${#fields.hasErrors('tanggalLahir')}? 'form-control is-invalid': 'form-control'" placeholder="Tanggal Lahir" />
                     <div th:if="${#fields.hasErrors('tanggalLahir')}" class="invalid-feedback">
                         <span th:errors="*{tanggalLahir}"></span>
