--- a/src/main/resources/templates/pages/master/kelas/add.html
+++ b/src/main/resources/templates/pages/master/kelas/add.html
@@ -1,68 +1,122 @@
-<form xmlns:th="http://www.thymeleaf.org" th:id="form-level" th:action="@{~/master/kelas/save}" th:method="post">
+<form xmlns:th="http://www.thymeleaf.org" th:id="form-kelas" th:action="@{~/master/kelas/save}"
+      th:method="post" th:object="${kelas}">
     <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Tambah Kelas</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <div class="form-group row">
-                <div class="col mb-3">
-                    <label for="waliKelas" class="form-label">Wali Kelas</label>
-                    <input type="text" id="waliKelas" name="waliKelas" class="form-control" placeholder="Wali Kelas" />
+            <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger errors" role="alert">
+                <ul>
+                    <li th:each="err : ${#fields.allErrors()}" th:text="${err}" />
+                </ul>
+            </div>
+            <div class="row g-2">
+                <div class="col mb-0">
+                    <label for="kode" class="form-label">Kode</label>
+                    <input type="text" id="kode" name="kode" th:value="${kelas.kode}" th:class="${#fields.hasErrors('kode')}? 'form-control is-invalid': 'form-control'" placeholder="Kode" />
+                    <div th:if="${#fields.hasErrors('kode')}" class="invalid-feedback">
+                        <span th:errors="*{kode}"></span>
+                    </div>
+                </div>
+                <div class="col mb-0">
+                    <label for="nama" class="form-label">Nama</label>
+                    <input type="text" id="nama" name="nama" th:value="${kelas.nama}" th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="Nama Kelas" />
+                    <div th:if="${#fields.hasErrors('nama')}" class="invalid-feedback">
+                        <span th:errors="*{nama}"></span>
+                    </div>
                 </div>
             </div>
-            <div class="form-group row">
-                <div class="col mb-3">
-                    <label for="kodeKelas" class="form-label">Kode Kelas</label>
-                    <input type="text" id="kodeKelas" name="kodeKelas" class="form-control" placeholder="Kode Kelas" />
+
+            <div class="row g-2">
+                <div class="col mb-0">
+                    <label for="ruangId" class="form-label">Ruangan</label>
+                    <select id="ruangId" name="ruangId" th:value="${kelas.ruangId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('ruangId')}? 'form-select select2 is-invalid': 'form-select select2'">
+                        <option value="">Pilih Ruangan</option>
+                        <option th:each="item : ${ruangan}" th:value="${item.id}" th:text="${item.kode}"
+                                th:selected="${item.id == kelas.ruangId}"></option>
+                    </select>
+                    <div th:if="${#fields.hasErrors('ruangId')}" class="invalid-feedback">
+                        <span th:errors="*{ruangId}"></span>
+                    </div>
+                </div>
+                <div class="col mb-0">
+                    <label for="lembagaId" class="form-label">Lembaga</label>
+                    <select id="lembagaId" name="lembagaId" th:value="${kelas.lembagaId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('ruangId')}? 'form-select select2 is-invalid': 'form-select select2'">
+                        <option value="">Pilih Lembaga</option>
+                        <option th:each="item : ${lembaga}" th:value="${item.id}" th:text="${item.nama}"
+                                th:selected="${item.id == kelas.lembagaId}"></option>
+                    </select>
+                    <div th:if="${#fields.hasErrors('lembagaId')}" class="invalid-feedback">
+                        <span th:errors="*{lembagaId}"></span>
+                    </div>
                 </div>
             </div>
-            <div class="form-group row">
-                <div class="col mb-3">
-                    <label for="level" class="form-label">Level</label>
-                    <select  id="level" name="status" class="form-select">
+
+            <div class="row g-2">
+                <div class="col mb-0">
+                    <label for="tahunAjaranId" class="form-label">Tahun Ajaran</label>
+                    <select id="tahunAjaranId" name="tahunAjaranId" th:value="${kelas.tahunAjaranId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('tahunAjaranId')}? 'form-select select2 is-invalid': 'form-select select2'">
+                        <option value="">Pilih Tahun Ajaran</option>
+                        <option th:each="item : ${tahunAjaran}" th:value="${item.id}" th:text="${item.nama}"
+                                th:selected="${item.id == kelas.tahunAjaranId}"></option>
+                    </select>
+                    <div th:if="${#fields.hasErrors('tahunAjaranId')}" class="invalid-feedback">
+                        <span th:errors="*{tahunAjaranId}"></span>
+                    </div>
+                </div>
+                <div class="col mb-0">
+                    <label for="levelId" class="form-label">Level</label>
+                    <select id="levelId" name="levelId" th:value="${kelas.levelId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('levelId')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Level</option>
-                        <option value="I">I</option>
-                        <option value="II">II</option>
-                        <option value="III">III</option>
-                        <option value="IV">IV</option>
-                        <option value="V">V</option>
-                        <option value="VI">VI</option>
-                        <option value="VII">VII</option>
-                        <option value="VIII">VIII</option>
-                        <option value="IX">IX</option>
-                        <option value="X">X</option>
-                        <option value="XI">XI</option>
-                        <option value="XXI">XXI</option>
+                        <option th:each="item : ${level}" th:value="${item.id}" th:text="${item.nama}"
+                                th:selected="${item.id == kelas.levelId}"></option>
                     </select>
+                    <div th:if="${#fields.hasErrors('levelId')}" class="invalid-feedback">
+                        <span th:errors="*{levelId}"></span>
+                    </div>
                 </div>
             </div>
-            <div class="form-group row">
-                <div class="col mb-3">
-                    <label for="nameKelas" class="form-label">Nama Kelas</label>
-                    <input type="text" id="nameKelas" name="nameKelas" class="form-control" placeholder="Nama Kelas" />
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col mb-3">
-                    <label for="jumlahSiswa" class="form-label">Jumlah Siswa</label>
-                    <input type="text" id="jumlahSiswa" name="jumlahSiswa" class="form-control" placeholder="Jumlah Siswa" />
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col mb-3">
-                    <label for="status" class="form-label">Status</label>
-                    <select  id="status" name="status" class="form-select">
-                        <option value="">Pilih Status</option>
-                        <option value="Aktif">Aktif</option>
-                        <option value="Non Aktif">Non Aktif</option>
+
+            <div class="row g-2">
+                <div class="col mb-0">
+                    <label for="sesiAkademikId" class="form-label">Sesi / Semester</label>
+                    <select id="sesiAkademikId" name="sesiAkademikId" th:value="${kelas.sesiAkademikId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('levelId')}? 'form-select select2 is-invalid': 'form-select select2'">
+                        <option value="">Pilih Sesi / Semester</option>
+                        <option th:each="item : ${sesi}" th:value="${item.id}" th:text="${item.semester}"
+                                th:selected="${item.id == kelas.sesiAkademikId}"></option>
                     </select>
+                    <div th:if="${#fields.hasErrors('sesiAkademikId')}" class="invalid-feedback">
+                        <span th:errors="*{sesiAkademikId}"></span>
+                    </div>
+                </div>
+                <div class="col mb-0">
+                    <label for="waliKelasId" class="form-label">Wali Kelas</label>
+                    <select id="waliKelasId" name="waliKelasId" th:value="${kelas.waliKelasId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('levelId')}? 'form-select select2 is-invalid': 'form-select select2'">
+                        <option value="">Pilih Wali Kelas</option>
+                        <option th:each="item : ${person}" th:value="${item.id}" th:text="${item.nama}"
+                                th:selected="${item.id == kelas.waliKelasId}"></option>
+                    </select>
+                    <div th:if="${#fields.hasErrors('waliKelasId')}" class="invalid-feedback">
+                        <span th:errors="*{waliKelasId}"></span>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-label-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Save</button>
+        <div class="modal-footer input-group">
+            <button type="submit" class="btn btn-success">
+                <i class="ti ti-check"></i>
+                Save
+            </button>
+            <button type="button" class="btn btn-label-secondary" data-bs-dismiss="modal">
+                Close
+            </button>
         </div>
     </div>
 </form>
