update tahun ajaran , siswa

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -137,7 +137,7 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a th:href="@{~/master/tahun}" class="menu-link">
+                    <a th:href="@{~/master/ta}" class="menu-link">
                         <div data-i18n="Master Tahun Ajaran">Master Tahun Ajaran</div>
                     </a>
                 </li>
