--- a/src/main/resources/templates/pages/master/tahun/index.html
+++ b/src/main/resources/templates/pages/master/tahun/index.html
@@ -12,8 +12,8 @@
     <div class="card">
         <div class="card-header">
             <div class="d-flex align-items-md-end justify-content-md-between">
-                <h5 class="card-title mb-0" id="ta-title" th:href="@{~/master/tahun/data}">Tahun Ajaran</h5>
-                <button class="btn rounded-pill btn-primary btn-sm" id="btn-add" th:href="@{~/master/tahun/add}">
+                <h5 class="card-title mb-0" id="ta-title" th:href="@{~/master/ta/data}">Tahun Ajaran</h5>
+                <button class="btn rounded-pill btn-primary btn-sm" id="btn-add" th:href="@{~/master/ta/add}">
                     <i class="ti ti-check"></i> &nbsp;
                     Tambah Tahun Ajaran
                 </button>
