--- a/src/main/resources/templates/pages/master/siswa/index.html
+++ b/src/main/resources/templates/pages/master/siswa/index.html
@@ -36,6 +36,11 @@
                         <th>Nama</th>
                         <th>kotaTempatLahir</th>
                         <th>tanggalLahir</th>
+                        <th>Gender</th>
+                        <th>Agama</th>
+                        <th>Gol Darah</th>
+                        <th>No Telp</th>
+                        <th>Email</th>
                         <th>Status</th>
                         <th class="cell-fit">Actions</th>
                     </tr>
