--- a/src/main/resources/templates/pages/master/tahun/delete.html
+++ b/src/main/resources/templates/pages/master/tahun/delete.html
@@ -1,4 +1,4 @@
-<form xmlns:th="http://www.thymeleaf.org" th:id="form-tahun" th:action="@{~/master/tahun/remove}"
+<form xmlns:th="http://www.thymeleaf.org" th:id="form-tahun" th:action="@{~/master/ta/remove}"
       th:method="post" th:object="${tahunAjaran}">
     <input type="hidden" name="id" th:value="${tahunAjaran.id}">
     <div class="modal-content">
