feat: update person

--- a/src/main/resources/templates/pages/master/level/delete.html
+++ b/src/main/resources/templates/pages/master/level/delete.html
@@ -29,7 +29,7 @@
             <div class="row">
                 <div class="col mb-3">
                     <label for="noUrut" class="form-label">No Urut</label>
-                    <input type="text" id="noUrut" name="nama" th:value="${level.noUrut}" class="form-control" readonly />
+                    <input type="text" id="noUrut" name="noUrut" th:value="${level.noUrut}" class="form-control" readonly />
                 </div>
             </div>
         </div>
