--- a/src/main/resources/templates/pages/master/level/edit.html
+++ b/src/main/resources/templates/pages/master/level/edit.html
@@ -14,7 +14,7 @@
             </div>
             <div class="row">
                 <div class="col mb-3">
-                    <label for="idLembaga" class="form-label">Id Lembaga</label>
+                    <label for="idLembaga" class="form-label">Lembaga</label>
                     <select id="idLembaga" name="idLembaga" th:value="${level.idLembaga}" data-allow-clear="true"
                             th:class="${#fields.hasErrors('idLembaga')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Lembaga</option>
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col mb-3">
                     <label for="noUrut" class="form-label">No Urut</label>
-                    <input type="text" id="noUrut" name="noUrut" th:value="${level.noUrut}" th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="No Urut" />
+                    <input type="number" id="noUrut" name="noUrut" th:value="${level.noUrut}" th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="No Urut" />
                     <div th:if="${#fields.hasErrors('noUrut')}" class="invalid-feedback">
                         <span th:errors="*{noUrut}"></span>
                     </div>
