--- a/src/main/resources/templates/pages/master/lookup/delete.html
+++ b/src/main/resources/templates/pages/master/lookup/delete.html
@@ -8,27 +8,23 @@
         </div>
         <div class="modal-body">
             <div class="row">
-                <div class="col mb-3">
+                <div class="col mb-0">
                 <label for="group" class="form-label">Group</label>
-                <input type="text" id="group" name="group" th:value="${lookup.group}" class="form-control" placeholder="Group" readonly>
+                <input type="text" id="group" name="group" th:value="${lookup.group}" class="form-control" readonly>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col mb-3">
+                <div class="col mb-0">
                     <label for="kode" class="form-label">Kode</label>
-                    <input type="text" id="kode" name="kode" th:value="${lookup.kode}" class="form-control" placeholder="Kode" readonly/>
+                    <input type="text" id="kode" name="kode" th:value="${lookup.kode}" class="form-control" readonly/>
                 </div>
             </div>
             <div class="row">
-                <div class="col mb-3">
+                <div class="col mb-0">
                     <label for="nama" class="form-label">Nama</label>
-                    <input type="text" id="nama" name="nama" th:value="${lookup.nama}" class="form-control" placeholder="Nama" readonly/>
+                    <input type="text" id="nama" name="nama" th:value="${lookup.nama}" class="form-control" readonly/>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-3">
+                <div class="col mb-0">
                     <label for="urutan" class="form-label">Urutan</label>
-                    <input type="text" id="urutan" name="urutan" th:value="${lookup.urutan}" class="form-control" placeholder="Urutan" readonly>
+                    <input type="text" id="urutan" name="urutan" th:value="${lookup.urutan}" class="form-control" readonly>
                 </div>
             </div>
         </div>
