--- a/src/main/resources/templates/pages/master/person/index.html
+++ b/src/main/resources/templates/pages/master/person/index.html
@@ -37,10 +37,10 @@
                         <th>NIK</th>
                         <th>Tanggal Lahir</th>
                         <th>Tempat Lahir</th>
-                        <th>Gender</th>
+                        <th>Jenis Kelamin</th>
                         <th>Agama</th>
-                        <th>Gol Darah</th>
-                        <th>No Tlp</th>
+                        <th>Gol-Darah</th>
+                        <th>No-Telp</th>
                         <th>Email</th>
                         <th>Status</th>
                         <th class="cell-fit">Actions</th>
