--- a/src/main/resources/templates/pages/master/level/add.html
+++ b/src/main/resources/templates/pages/master/level/add.html
@@ -47,7 +47,8 @@
             <div class="row">
                 <div class="col mb-3">
                     <label for="noUrut" class="form-label">No Urut</label>
-                    <input type="text" id="noUrut" name="noUrut" th:value="${level.noUrut}" th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="No Urut" />
+                    <input type="number" id="noUrut" name="noUrut" th:value="${level.noUrut}"
+                           th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="no urut" />
                     <div th:if="${#fields.hasErrors('noUrut')}" class="invalid-feedback">
                         <span th:errors="*{noUrut}"></span>
                     </div>
