--- a/src/main/resources/templates/pages/master/person/add.html
+++ b/src/main/resources/templates/pages/master/person/add.html
@@ -15,7 +15,7 @@
                 <div class="col mb-3">
                     <label for="userId" class="form-label">User Id</label>
                     <input type="text" id="userId" name="userId" th:value="${person.userId}"
-                           th:class="${#fields.hasErrors('userId')}? 'form-control is-invalid': 'form-control'" placeholder="User Id" />
+                           th:class="${#fields.hasErrors('userId')}? 'form-control is-invalid': 'form-control'" placeholder="user id" />
                     <div th:if="${#fields.hasErrors('userId')}" class="invalid-feedback">
                         <span th:errors="*{userId}"></span>
                     </div>
@@ -23,7 +23,7 @@
                 <div class="col mb-3">
                     <label for="nomor" class="form-label">Nomor</label>
                     <input type="text" id="nomor" name="nomor" th:value="${person.nomor}"
-                           th:class="${#fields.hasErrors('nomor')}? 'form-control is-invalid': 'form-control'" placeholder="Nomor" />
+                           th:class="${#fields.hasErrors('nomor')}? 'form-control is-invalid': 'form-control'" placeholder="nomor" />
                     <div th:if="${#fields.hasErrors('nomor')}" class="invalid-feedback">
                         <span th:errors="*{nomor}"></span>
                     </div>
@@ -31,7 +31,7 @@
                 <div class="col mb-3">
                     <label for="nama" class="form-label">Nama</label>
                     <input type="text" id="nama" name="nama" th:value="${person.nama}"
-                           th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="Nama" />
+                           th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="nama" />
                     <div th:if="${#fields.hasErrors('nama')}" class="invalid-feedback">
                         <span th:errors="*{nama}"></span>
                     </div>
@@ -41,7 +41,7 @@
                 <div class="col mb-0">
                     <label for="alamatTinggal" class="form-label">Alamat Tinggal</label>
                     <input type="text" id="alamatTinggal" name="alamatTinggal" th:value="${person.alamatTinggal}"
-                           th:class="${#fields.hasErrors('alamatTinggal')}? 'form-control is-invalid': 'form-control'" placeholder="Alamat Tinggal" />
+                           th:class="${#fields.hasErrors('alamatTinggal')}? 'form-control is-invalid': 'form-control'" placeholder="alamat tinggal" />
                     <div th:if="${#fields.hasErrors('alamatTinggal')}" class="invalid-feedback">
                         <span th:errors="*{alamatTinggal}"></span>
                     </div>
@@ -49,7 +49,7 @@
                 <div class="col mb-0">
                     <label for="nik" class="form-label">NIK</label>
                     <input type="text" id="nik" name="nik" th:value="${person.nik}"
-                           th:class="${#fields.hasErrors('nik')}? 'form-control is-invalid': 'form-control'" placeholder="NIK" />
+                           th:class="${#fields.hasErrors('nik')}? 'form-control is-invalid': 'form-control'" placeholder="nik" />
                     <div th:if="${#fields.hasErrors('nik')}" th:class="invalid-feedback">
                         <span th:errors="*{nik}"></span>
                     </div>
@@ -57,7 +57,7 @@
                 <div class="col mb-0">
                     <label for="tanggalLahir" class="form-label">Tanggal Lahir</label>
                     <input type="date" id="tanggalLahir" name="tanggalLahir" th:value="${person.tanggalLahir}"
-                           th:class="${#fields.hasErrors('alamatTinggal')}? 'form-control is-invalid': 'form-control'" placeholder="Alamat Tinggal" />
+                           th:class="${#fields.hasErrors('alamatTinggal')}? 'form-control is-invalid': 'form-control'" placeholder="tanggal lahir" />
                     <div th:if="${#fields.hasErrors('tanggalLahir')}" class="invalid-feedback">
                         <span th:errors="*{alamatTinggal}"></span>
                     </div>
@@ -67,13 +67,13 @@
                 <div class="col mb-0">
                     <label for="tempatLahir" class="form-label">Tempat Lahir</label>
                     <input type="text" id="tempatLahir" name="tempatLahir" th:value="${person.tempatLahir}"
-                           th:class="${#fields.hasErrors('tempatLahir')}? 'form-control is-invalid': 'form-control'" placeholder="Tempat Lahir" />
+                           th:class="${#fields.hasErrors('tempatLahir')}? 'form-control is-invalid': 'form-control'" placeholder="tempat lahir" />
                     <div th:if="${#fields.hasErrors('tempatLahir')}" class="invalid-feedback">
                         <span th:errors="*{tempatLahir}"></span>
                     </div>
                 </div>
                 <div class="col mb-3">
-                    <label for="gender" class="form-label">Gender</label>
+                    <label for="gender" class="form-label">Jenis Kelamin</label>
                     <select id="gender" name="gender" th:value="${person.gender}" data-allow-clear="true"
                             th:class="${#fields.hasErrors('gender')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Gender</option>
@@ -99,7 +99,7 @@
             </div>
             <div class="row">
                 <div class="col mb-3">
-                    <label for="golDarah" class="form-label">Gol Darah</label>
+                    <label for="golDarah" class="form-label">Gol-Darah</label>
                     <select id="golDarah" name="golDarah" th:value="${person.golDarah}" data-allow-clear="true"
                             th:class="${#fields.hasErrors('golDarah')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Gol Darah</option>
@@ -111,17 +111,17 @@
                     </div>
                 </div>
                 <div class="col mb-0">
-                    <label for="noTelp" class="form-label">No Telp</label>
+                    <label for="noTelp" class="form-label">No-Telp</label>
                     <input type="text" id="noTelp" name="noTelp" th:value="${person.noTelp}"
-                           th:class="${#fields.hasErrors('noTelp')}? 'form-control is-invalid': 'form-control'" placeholder="No Telp" />
+                           th:class="${#fields.hasErrors('noTelp')}? 'form-control is-invalid': 'form-control'" placeholder="no-telp" />
                     <div th:if="${#fields.hasErrors('noTelp')}" th:class="invalid-feedback">
                         <span th:errors="*{noTelp}"></span>
                     </div>
                 </div>
                 <div class="col mb-0">
                     <label for="email" class="form-label">Email</label>
-                    <input type="text" id="email" name="email" th:value="${person.email}"
-                           th:class="${#fields.hasErrors('email')}? 'form-control is-invalid': 'form-control'" placeholder="Email" />
+                    <input type="email" id="email" name="email" th:value="${person.email}"
+                           th:class="${#fields.hasErrors('email')}? 'form-control is-invalid': 'form-control'" placeholder="email" />
                     <div th:if="${#fields.hasErrors('email')}" th:class="invalid-feedback">
                         <span th:errors="*{email}"></span>
                     </div>
