--- a/src/main/resources/templates/pages/master/person/edit.html
+++ b/src/main/resources/templates/pages/master/person/edit.html
@@ -15,14 +15,14 @@
             <div class="row">
                 <div class="col mb-3">
                     <label for="userId" class="form-label">User Id</label>
-                    <input type="text" id="userId" name="userId" th:value="${person.userId}" th:class="${#fields.hasErrors('userId')}? 'form-control is-invalid': 'form-control'" placeholder="User Id" />
+                    <input type="text" id="userId" name="userId" th:value="${person.userId}" th:class="${#fields.hasErrors('userId')}? 'form-control is-invalid': 'form-control'" />
                     <div th:if="${#fields.hasErrors('userId')}" class="invalid-feedback">
                         <span th:errors="*{userId}"></span>
                     </div>
                 </div>
                 <div class="col mb-3">
                     <label for="nomor" class="form-label">Nomor</label>
-                    <input type="text" id="nomor" name="nomor" th:value="${person.nomor}" th:class="${#fields.hasErrors('nomor')}? 'form-control is-invalid': 'form-control'" placeholder="Nomor" />
+                    <input type="text" id="nomor" name="nomor" th:value="${person.nomor}" th:class="${#fields.hasErrors('nomor')}? 'form-control is-invalid': 'form-control'" />
                     <div th:if="${#fields.hasErrors('nomor')}" class="invalid-feedback">
                         <span th:errors="*{nomor}"></span>
                     </div>
@@ -30,7 +30,7 @@
                 <div class="col mb-3">
                     <label for="nama" class="form-label">Nama Person</label>
                     <input type="text" id="nama" name="nama" th:value="${person.nama}"
-                           th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="Nama" />
+                           th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" />
                     <div th:if="${#fields.hasErrors('nama')}" class="invalid-feedback">
                         <span th:errors="*{nama}"></span>
                     </div>
@@ -40,7 +40,7 @@
                 <div class="col mb-3">
                     <label for="alamatTinggal" class="form-label">Alamat Tinggal</label>
                     <input type="text" id="alamatTinggal" name="alamatTinggal" th:value="${person.alamatTinggal}"
-                           th:class="${#fields.hasErrors('alamatTinggal')}? 'form-control is-invalid': 'form-control'" placeholder="Alamat Tinggal" />
+                           th:class="${#fields.hasErrors('alamatTinggal')}? 'form-control is-invalid': 'form-control'" />
                     <div th:if="${#fields.hasErrors('alamatTinggal')}" class="invalid-feedback">
                         <span th:errors="*{alamatTinggal}"></span>
                     </div>
@@ -48,7 +48,7 @@
                 <div class="col mb-3">
                     <label for="nik" class="form-label">NIK</label>
                     <input type="text" id="nik" name="nik" th:value="${person.nik}"
-                           th:class="${#fields.hasErrors('nik')}? 'form-control is-invalid': 'form-control'" placeholder="NIK" />
+                           th:class="${#fields.hasErrors('nik')}? 'form-control is-invalid': 'form-control'" />
                     <div th:if="${#fields.hasErrors('nik')}" class="invalid-feedback">
                         <span th:errors="*{nik}"></span>
                     </div>
@@ -56,7 +56,7 @@
                 <div class="col mb-3">
                     <label for="tanggalLahir" class="form-label">Tanggal Lahir</label>
                     <input type="date" id="tanggalLahir" name="tanggalLahir" th:value="${person.tanggalLahir}"
-                           th:class="${#fields.hasErrors('tanggalLahir')}? 'form-control is-invalid': 'form-control'" placeholder="Tanggal Lahir" />
+                           th:class="${#fields.hasErrors('tanggalLahir')}? 'form-control is-invalid': 'form-control'" />
                     <div th:if="${#fields.hasErrors('tanggalLahir')}" class="invalid-feedback">
                         <span th:errors="*{tanggalLahir}"></span>
                     </div>
@@ -66,18 +66,18 @@
                 <div class="col mb-3">
                     <label for="tempatLahir" class="form-label">Tempat Lahir</label>
                     <input type="text" id="tempatLahir" name="tempatLahir" th:value="${person.tempatLahir}"
-                           th:class="${#fields.hasErrors('tempatLahir')}? 'form-control is-invalid': 'form-control'" placeholder="Tempat Lahir" />
+                           th:class="${#fields.hasErrors('tempatLahir')}? 'form-control is-invalid': 'form-control'" />
                     <div th:if="${#fields.hasErrors('tempatLahir')}" class="invalid-feedback">
                         <span th:errors="*{tempatLahir}"></span>
                     </div>
                 </div>
                 <div class="col mb-0">
-                    <label for="gender" class="form-label">Gender</label>
+                    <label for="gender" class="form-label">Jenis Kelamin</label>
                     <select id="gender" name="gender" th:value="${person.gender}" data-allow-clear="true"
                             th:class="${#fields.hasErrors('gender')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Gender</option>
-                        <option th:each="item : ${gender}" th:value="${item.id}" th:text="${item.nama}"
-                                th:selected="${item.id == person.gender}"></option>
+                        <option th:each="item : ${gender}" th:value="${item.nama}" th:text="${item.nama}"
+                                th:selected="${item.nama == person.gender}"></option>
                     </select>
                     <div th:if="${#fields.hasErrors('gender')}" class="invalid-feedback">
                         <span th:errors="*{gender}"></span>
@@ -88,8 +88,8 @@
                     <select id="agama" name="agama" th:value="${person.agama}" data-allow-clear="true"
                             th:class="${#fields.hasErrors('agama')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Agama</option>
-                        <option th:each="item : ${agama}" th:value="${item.id}" th:text="${item.nama}"
-                                    th:selected="${item.id == person.gender}"></option>
+                        <option th:each="item : ${agama}" th:value="${item.nama}" th:text="${item.nama}"
+                                    th:selected="${item.nama == person.agama}"></option>
                     </select>
                     <div th:if="${#fields.hasErrors('agama')}" class="invalid-feedback">
                         <span th:errors="*{agama}"></span>
@@ -102,8 +102,8 @@
                     <select id="golDarah" name="golDarah" th:value="${person.golDarah}" data-allow-clear="true"
                             th:class="${#fields.hasErrors('golDarah')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Gol-Darah</option>
-                        <option th:each="item : ${golDarah}" th:value="${item.id}" th:text="${item.nama}"
-                                th:selected="${item.id == person.golDarah}"></option>
+                        <option th:each="item : ${golDarah}" th:value="${item.nama}" th:text="${item.nama}"
+                                th:selected="${item.nama == person.golDarah}"></option>
                     </select>
                     <div th:if="${#fields.hasErrors('golDarah')}" class="invalid-feedback">
                         <span th:errors="*{golDarah}"></span>
@@ -112,15 +112,15 @@
                 <div class="col mb-3">
                     <label for="noTelp" class="form-label">No Telp</label>
                     <input type="text" id="noTelp" name="noTelp" th:value="${person.noTelp}"
-                           th:class="${#fields.hasErrors('noTelp')}? 'form-control is-invalid': 'form-control'" placeholder="No Telp" />
+                           th:class="${#fields.hasErrors('noTelp')}? 'form-control is-invalid': 'form-control'" />
                     <div th:if="${#fields.hasErrors('noTelp')}" class="invalid-feedback">
                         <span th:errors="*{noTelp}"></span>
                     </div>
                 </div>
                 <div class="col mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="text" id="email" name="email" th:value="${person.email}"
-                           th:class="${#fields.hasErrors('email')}? 'form-control is-invalid': 'form-control'" placeholder="Email" />
+                    <input type="email" id="email" name="email" th:value="${person.email}"
+                           th:class="${#fields.hasErrors('email')}? 'form-control is-invalid': 'form-control'" />
                     <div th:if="${#fields.hasErrors('email')}" class="invalid-feedback">
                         <span th:errors="*{email}"></span>
                     </div>
