--- a/src/main/resources/templates/pages/master/tahun/edit.html
+++ b/src/main/resources/templates/pages/master/tahun/edit.html
@@ -1,6 +1,6 @@
 <form xmlns:th="http://www.thymeleaf.org" th:id="form-tahun" th:action="@{~/master/ta/update}"
-      th:method="post" th:object="${tahunAjaran}">
-    <input type="hidden" name="id" th:value="${tahunAjaran.id}">
+      th:method="post" th:object="${tahun}">
+    <input type="hidden" name="id" th:value="${tahun.id}">
     <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Edit Tahun Ajaran</h5>
@@ -15,22 +15,22 @@
             <div class="row g-2">
                 <div class="col mb-0">
                     <label for="nama" class="form-label">Nama</label>
-                    <input type="text" id="nama" name="nama" th:value="${tahunAjaran.nama}"
+                    <input type="text" id="nama" name="nama" th:value="${tahun.nama}"
                            th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="Nama" />
                     <div th:if="${#fields.hasErrors('nama')}" class="invalid-feedback">
                         <span th:errors="*{nama}"></span>
                     </div>
                 </div>
                 <div class="col mb-0">
-                    <label for="kodeKurikulumId" class="form-label">kodeKurikulum</label>
-                    <select id="kodeKurikulumId" name="kodeKurikulumId" th:value="${tahunAjaran.kodeKurikulumId}" data-allow-clear="true"
-                            th:class="${#fields.hasErrors('kodeKurikulumId')}? 'form-select select2 is-invalid': 'form-select select2'">
+                    <label for="kurikulumId" class="form-label">kodeKurikulum</label>
+                    <select id="kurikulumId" name="kurikulumId" th:value="${tahun.kurikulumId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('kurikulumId')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Kurikulum</option>
-                        <option th:each="item : ${dataKurikulum}" th:value="${item.id}" th:text="${item.namaKurikulum}"
-                                th:selected="${item.id == tahunAjaran.kodeKurikulumId}"></option>
+                        <option th:each="item : ${dataKurikulum}" th:value="${item.id}" th:text="${item.nama}"
+                                th:selected="${item.id == tahun.kurikulumId}"></option>
                     </select>
-                    <div th:if="${#fields.hasErrors('kodeKurikulumId')}" class="invalid-feedback">
-                        <span th:errors="*{kodeKurikulumId}"></span>
+                    <div th:if="${#fields.hasErrors('kurikulumId')}" class="invalid-feedback">
+                        <span th:errors="*{kurikulumId}"></span>
                     </div>
                 </div>
             </div>
