feat: fixing kelas

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -93,7 +93,7 @@
                 </li>
                 <li class="menu-item">
                     <a th:href="@{~/master/mapel}" class="menu-link">
-                        <div data-i18n="Mata Pelajaran">Mata Pelajaran</div>
+                        <div data-i18n="Master Mata Pelajaran">Master Mata Pelajaran</div>
                     </a>
                 </li>
                 <li class="menu-item">
@@ -113,7 +113,7 @@
                 </li>
                 <li class="menu-item">
                     <a th:href="@{~/master/kelas}" class="menu-link">
-                        <div data-i18n="Kelas">Kelas</div>
+                        <div data-i18n="Master Kelas">Master Kelas</div>
                     </a>
                 </li>
                 <li class="menu-item">
@@ -123,7 +123,7 @@
                 </li>
                 <li class="menu-item">
                     <a th:href="@{~/master/gedung}" class="menu-link">
-                        <div data-i18n="Gedung">Gedung</div>
+                        <div data-i18n="Master Gedung">Master Gedung</div>
                     </a>
                 </li>
                 <li class="menu-item">
