update tahun ajaran

--- a/src/main/resources/templates/pages/master/tahun/add.html
+++ b/src/main/resources/templates/pages/master/tahun/add.html
@@ -21,7 +21,7 @@
                     </div>
                 </div>
                 <div class="col mb-0">
-                    <label for="kurikulumId" class="form-label">kodeKurikulum</label>
+                    <label for="kurikulumId" class="form-label">Kode Kurikulum</label>
                     <select id="kurikulumId" name="kurikulumId" th:value="${tahunAjaran.kurikulumId}" data-allow-clear="true"
                             th:class="${#fields.hasErrors('kurikulumId')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Kurikulum</option>
