--- a/src/main/resources/templates/pages/master/ruangan/add.html
+++ b/src/main/resources/templates/pages/master/ruangan/add.html
@@ -17,7 +17,7 @@
                     <select id="gedungId" name="gedungId" th:value="${ruangan.gedungId}" data-allow-clear="true"
                             th:class="${#fields.hasErrors('gedungId')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Gedung</option>
-                        <option th:each="item : ${dataGedung}" th:value="${item.id}" th:text="${item.nama}"
+                        <option th:each="item : ${dataGedung}" th:value="${item.id}" th:text="${item.kode}"
                                 th:selected="${item.id == ruangan.gedungId}"></option>
                     </select>
                     <div th:if="${#fields.hasErrors('gedungId')}" class="invalid-feedback">
