--- a/src/main/resources/templates/pages/master/tahun/delete.html
+++ b/src/main/resources/templates/pages/master/tahun/delete.html
@@ -15,6 +15,7 @@
                 <div class="col mb-3">
                     <label for="kodeKurikulum" class="form-label">Nama</label>
                     <input type="text" id="kodeKurikulum" name="kodeKurikulum" th:value="${tahunAjaran.kodeKurikulum}" class="form-control" readonly />
+                    <input type="hidden" name="kurikulumId" th:value="${tahunAjaran.kurikulumId}">
                 </div>
             </div>
         </div>
